--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoeveel schermen rockt schaap vandaag?</title>
+    <title>Hoeveel schermen rockt Linnen vandaag?</title>
     <meta name="description" content="Een helder overzicht over hoeveel schermen Linnen vandaag rockt in zijn HQ.">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
