--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <div class="title">Hoeveel schermen rockt Linnen Pietersen al?</div>
+    <div class="title">Hoeveel schermen rockt Linnen vandaag?</div>
     <div class="emoji-grid" id="tvGrid"></div>
     <div id="counter" class="counter"></div>
 
