--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoeveel schermen rockt Linnen vandaag?</title>
-    <meta name="description" content="Een helder overzicht over hoeveel schermen Linnen vandaag rockt in zijn HQ.">
+    <meta name="description" content="Een helder overzicht over hoeveel schermen Linnen vandaag rockt in zijn HQ. 👊🇺🇸🔥">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
 
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <div class="title">Hoeveel schermen rockt Linnen vandaag?</div>
+    <div class="title">Hoeveel schermen rockt Linnen vandaag? 👊🇺🇸🔥</div>
     <div class="emoji-grid" id="tvGrid"></div>
     <div id="counter" class="counter"></div>
 
