--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             align-items: center;
             background: 
                 linear-gradient(
-                    rgba(0, 0, 0, 0.70),
-                    rgba(0, 0, 0, 0.70)
+                    rgba(161, 161, 161, 0.7),
+                    rgba(161, 161, 161, 0.7)
                 ),
                 repeating-linear-gradient(
                     to bottom,
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <div class="title">Hoeveel schermen rockt Linnen vandaag? 👊🇺🇸🔥</div>
+    <div class="title">Hoeveel schermen rockt Linnen vandaag? Liberation day!</div>
     <div class="emoji-grid" id="tvGrid"></div>
     <div id="counter" class="counter"></div>
 
