--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         }
 
         .title {
-            color: white;
+            color: rgb(0, 0, 0);
             font-size: min(6vw, 6vh);
             margin-bottom: 30px;
             text-align: center;
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <div class="title">Hoeveel schermen rockt Linnen vandaag? Liberation day!</div>
+    <div class="title">Hoeveel schermen rockt Linnen vandaag? Stable Genius!</div>
     <div class="emoji-grid" id="tvGrid"></div>
     <div id="counter" class="counter"></div>
 
