--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
     </style>
 </head>
 <body>
-    <div class="title">Hoeveel schermen rockt Linnen vandaag? Harvard, Kilmar Abrego Garcia, Powell, Pete Hegseth</div>
+    <div class="title">Hoeveel schermen rockt Linnen vandaag? Harvard, Kilmar Abrego Garcia, Powell, Pete Hegseth, Tarrifs, Insurrection Act
+, Elon Musk, 20 January, Steve Bannon, Project 2025, Associated Press, Greenland, Panama canal, Nayib Armando Bukele Ortez, Jan Dirk Vance.
+</div>
     <div class="emoji-grid" id="tvGrid"></div>
     <div id="counter" class="counter"></div>
 
